# scratchy-pad

./: .gitignore  Taskfile.yml  pyproject.toml
docs/: flow.puml  use-cases.puml
githooks/: commit-msg.py
resources/api/: message.proto
scratchy_pad_adapters/: pyproject.toml
scratchy_pad_app/: main.py
scratchy_pad_domain/: pyproject.toml
scripts/: generate_grpc.py
